# verizon

./: LICENSE  README.md  class_utils.py  classes.py  cmd_fns.py  imports.py  main.py  other_utils.py  pyproject.toml  utils.py
verizon/: class_utils.py  classes.py  cmd_fns.py  main.py  other_utils.py  utils.py
verizon/future/: README.md
