[tool.poetry]
name = "verizon"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
